# infra-tools

./: README.md  pyproject.toml
deploys/: syncthing.py
facts/: syncthing.py
infra/: __init__.py
infra/deploys/: bind.py  caddy.py  helix.py  rootless_docker.py  syncthing.py
infra/deploys/bin_service/: __init__.py
infra_tools/deploys/: docker.py  rclone.py
infra_tools/deploys/bin_service/templates/: service.j2
infra_tools/operations/: syncthing.py
