[project]
name = "infra_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinfra>=3.5.1",
]

[tool.setuptools]
packages = ["infra_tools", "infra_tools.deploys", "infra_tools.facts", "infra_tools.operations"]

[tool.setuptools.package-data]
"infra_tools" = ["py.typed"]
"infra_tools.deploys" = ["py.typed"]
"infra_tools.facts" = ["py.typed"]
"infra_tools.operations" = ["py.typed"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownArgumentType = false
reportPrivateImportUsage = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeArgument = false
reportAssignmentType = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportAny = false
reportUnknownParameterType = false
reportMissingParameterType = false
